@@ -73,7 +73,7 @@ public:
     virtual int keepComments() { return 1; }		///< Return comments, 0=no, 1=yes, 2=callback
     virtual int keepWhitespace() { return 1; }		///< Return extra whitespace, 0=no, 1=yes
     virtual bool lineDirectives() { return true; }	///< Insert `line directives
-    virtual bool pedantic() { return false; }		///< Obey standard; Don't substitute `__FILE__ and `__LINE__
+    virtual bool pedantic() { return false; }		///< Obey standard; Don't substitute `error
 
     // CALLBACK METHODS
     // This probably will want to be overridden for given child users of this class.
