@@ -194,8 +194,7 @@ on how low level and complete the information you need is.
 Verilog::Preproc is useful when you need only text out, or a list of
 defines, etc.  It can preprocess a file, or be used to provide the Verilog
 macro language on top of synthesis scripts.  It understands the full
-SystemVerilog 2005 preprocessor syntax, and parts of the SystemVerilog 2009
-draft standard (the rest will be supported when the standard is approved.)
+SystemVerilog 2009 preprocessor syntax.
 
 =item Verilog::Parser
 
